# TeensyRecorders_ProfilesEditor

./: .gitignore  CHANGELOG.md  README.md  TeensyProfilesEditor.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
POC.old/: TR_ProfileEditor.py  TR_configurator_poc.py
app/: TR_configurator.py  config.py  ini_utils.py  main.py  ui_editor.py
compiler/: compiler.py
img/: logo_PR.icns
initial_profile/: Profiles.ini  parameters_list.ods
